--- a/.github/workflows/Temp-workflow.yml
+++ b/.github/workflows/Temp-workflow.yml
@@ -23,9 +23,13 @@ jobs:
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
         run: npm ci
+        run: npm run build --if-present
+        run: npm start & npx wait-on http://localhost:4200
       - name: Test Accessibility
         id: run-ada-tests
-        run: npx pa11y-ci https://codito.in/xvfb-in-github-action/
+        run: |
+          npm install -g pa11y-ci
+          npx pa11y-ci http://localhost:4200
       - name: Upload test report
         if: failure() && steps.run-ada-tests.outcome == 'failure'
         uses: actions/upload-artifact@v3
