--- a/.github/workflows/Temp-workflow.yml
+++ b/.github/workflows/Temp-workflow.yml
@@ -22,9 +22,10 @@ jobs:
           key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
-        run: npm ci
-        run: npm run build --if-present
-        run: npm start & npx wait-on http://localhost:4200
+        run: |
+          npm ci
+          npm run build --if-present
+          npm start & npx wait-on http://localhost:4200
       - name: Test Accessibility
         id: run-ada-tests
         run: |
