--- a/.github/workflows/Temp-workflow.yml
+++ b/.github/workflows/Temp-workflow.yml
@@ -22,15 +22,14 @@ jobs:
           key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
-        run: |
-          npm ci
-          npm run build --if-present
-          npm start & npx wait-on http://localhost:4200
+        run: npm ci
       - name: Test Accessibility
         id: run-ada-tests
         run: |
           npm install -g pa11y-ci
-          npx pa11y-ci http://localhost:4200
+          npm i -g concurrently
+          concurrently \"npm start\" \"sleep 20 && sh pa11y.sh\
+        
       - name: Upload test report
         if: failure() && steps.run-ada-tests.outcome == 'failure'
         uses: actions/upload-artifact@v3
