--- a/.github/workflows/Temp-workflow.yml
+++ b/.github/workflows/Temp-workflow.yml
@@ -27,8 +27,8 @@ jobs:
         id: run-ada-tests
         run: |
           npm install -g pa11y-ci
-          npm i -g concurrently
-          concurrently \"npm start\" \"sleep 20 && sh pa11y.sh\
+          npm install -g concurrently
+          concurrently "npm start" "sleep 20 && sh pa11y.sh
         
       - name: Upload test report
         if: failure() && steps.run-ada-tests.outcome == 'failure'
