--- a/.github/workflows/Temp-workflow.yml
+++ b/.github/workflows/Temp-workflow.yml
@@ -26,9 +26,8 @@ jobs:
       - name: Test Accessibility
         id: run-ada-tests
         run: |
-          npm install -g pa11y-ci
           npm install -g concurrently
-          concurrently "npm start" "sleep 20 && sh pa11y.sh
+          concurrently "npm start" "sleep 20 && sh pa11y.sh"
         
       - name: Upload test report
         if: failure() && steps.run-ada-tests.outcome == 'failure'
