--- a/.github/workflows/Temp-workflow.yml
+++ b/.github/workflows/Temp-workflow.yml
@@ -34,7 +34,8 @@ jobs:
           npm install -g pa11y-ci
           npm install -g concurrently
           chromedriver --url-base=/wd/hub &
-          concurrently "npm start --browser headless-chrome & npx wait-on http://localhost:4200 --browser headless-chrome" "sleep 20 && sh pa11y.sh"
+          npm run test:headless
+          concurrently "npm start & npx wait-on http://localhost:4200" "sleep 20 && sh pa11y.sh"
         
       - name: Upload test report
         if: failure() && steps.run-ada-tests.outcome == 'failure'
