--- a/.github/workflows/Temp-workflow.yml
+++ b/.github/workflows/Temp-workflow.yml
@@ -22,19 +22,13 @@ jobs:
           key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
-        run: |
-          npm ci
-          set -ex
-          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-          sudo apt install ./google-chrome-stable_current_amd64.deb
-      - uses: nanasess/setup-chromedriver@v1
+        run: npm ci
       - name: Test Accessibility
         id: run-ada-tests
         run: |
           npm install -g pa11y-ci
           npm install -g concurrently
-          chromedriver --url-base=/wd/hub &
-          npm run test:headless
+          nnpm run test -- --configuration production
           concurrently "npm start & npx wait-on http://localhost:4200" "sleep 20 && sh pa11y.sh"
         
       - name: Upload test report
