--- a/angular.json
+++ b/angular.json
@@ -81,6 +81,14 @@
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
+          "configurations": { 
+          "production": {
+            "sourceMap": false,
+            "codeCoverage": true,
+            "browsers": "ChromeHeadless",
+            "watch": false
+          }
+        },
           "options": {
             "main": "src/test.ts",
             "polyfills": "src/polyfills.ts",
@@ -104,6 +112,9 @@
               "src/**/*.html"
             ]
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
