--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/jasmine": "~4.0.0",
     "@typescript-eslint/eslint-plugin": "5.43.0",
     "@typescript-eslint/parser": "5.43.0",
+    "angular-cli-ghpages": "^1.0.5",
     "axe-core": "^4.6.3",
     "eslint": "^8.28.0",
     "jasmine-core": "~4.3.0",
