--- a/.github/workflows/Temp-workflow.yml
+++ b/.github/workflows/Temp-workflow.yml
@@ -22,13 +22,16 @@ jobs:
           key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
-        run: npm ci
+        run: |
+          npm ci
+          npm install --save-dev karma-phantomjs-launcher
+          npm install --save intl
       - name: Test Accessibility
         id: run-ada-tests
         run: |
           npm install -g pa11y-ci
           npm install -g concurrently
-          npm run test -- --configuration production
+          ng test --browsers Chrome
           concurrently "npm start & npx wait-on http://localhost:4200" "sleep 20 && sh pa11y.sh"
         
       - name: Upload test report
