--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^14.2.0",
     "bootstrap": "^3.0.0",
     "concurrently": "^7.6.0",
+    "intl": "^1.2.5",
     "pa11y-ci": "^3.0.1",
     "pa11y-ci-reporter-html": "^5.0.4",
     "rxjs": "^6.6.3",
@@ -52,6 +53,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "karma-phantomjs-launcher": "^1.0.4",
     "typescript": "~4.7.2"
   }
 }
