--- a/.github/workflows/Temp-workflow.yml
+++ b/.github/workflows/Temp-workflow.yml
@@ -22,16 +22,15 @@ jobs:
           key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
-        run: |
-          npm ci
-          npm install --save-dev karma-phantomjs-launcher
-          npm install --save intl
+        run: npm ci
       - name: Test Accessibility
         id: run-ada-tests
         run: |
+          npm install --save-dev karma-phantomjs-launcher
+          npm install --save intl
           npm install -g pa11y-ci
           npm install -g concurrently
-          ng test --browsers Chrome
+          npm run test
           concurrently "npm start & npx wait-on http://localhost:4200" "sleep 20 && sh pa11y.sh"
         
       - name: Upload test report
