--- a/.github/workflows/Temp-workflow.yml
+++ b/.github/workflows/Temp-workflow.yml
@@ -35,11 +35,12 @@ jobs:
           sudo mv chromedriver /usr/bin/chromedriver
           sudo chown root:root /usr/bin/chromedriver
           sudo chmod +x /usr/bin/chromedriver
-          export DISPLAY=$(cat /etc/resolv.conf | grep nameserver | awk '{print $2; exit;}'):0.0
           npm install --save-dev karma-phantomjs-launcher
           npm install --save intl
           npm install -g pa11y-ci
           npm install -g concurrently
+          export DISPLAY=$(cat /etc/resolv.conf | grep nameserver | awk '{print $2; exit;}'):0.0
+          echo $DISPLAY
           npm run test
           concurrently "npm start & npx wait-on http://localhost:4200" "sleep 20 && sh pa11y.sh"
         
